fixed bank align

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -346,7 +346,7 @@ input[name="subject"]::placeholder {
 }
 
 .section {
-  text-align: left;
+  text-align: center;
   display: flex;
   justify-content: center;
   align-items: center;
